k8s/login-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-app-service
  namespace: login-app
  labels:
    app: login-app
    tier: frontend
spec:
  type: NodePort
  selector:
    app: login-app
  ports:
    - name: http
      protocol: TCP
      port: 80            # Port yang digunakan untuk akses dari luar
      targetPort: 3000    # Port dalam container
      # nodePort: 30341   # Port yang digunakan pada node (biasanya di set otomatis)
