k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-app-service
  namespace: login-app
spec:
  type: NodePort
  selector:
    app: login-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30341
